fixing weird overflow issues

--- a/site.css
+++ b/site.css
@@ -3,6 +3,7 @@
 :root {
   --black: #000;
   --white: #fff;
+  --red: #f00;
   --cadetblue: #5f9ea0;
   --dimgrey: #696969;
 }
@@ -165,12 +166,16 @@ li {
 }
 
 .content {
-  width: 45%;
   margin-top: 0;
   margin-left: auto;
   margin-right: auto;
-  border: solid 0 #ff0000;
-  min-width: 400px;
+  border: solid 0 var(--red);
+}
+@media (min-width: 768px) {
+  .content {
+    width: 45%;
+    min-width: 400px;
+  }
 }
 
 /* @media (max-width: 767px) {
@@ -221,7 +226,7 @@ li {
 
 .button_2 {
   order: 2;
-  background-color: #ff0000;
+  background-color: var(--red);
   border: solid 0 var(--dimgrey);
   color: var(--white);
   padding: 15px 20px;
@@ -288,9 +293,14 @@ li {
   order: 1;
   width: 33%;
   margin-top: 0;
-  min-width: 300px;
   align-self: auto;
-  border: solid0 #ff0000;
+  border: solid0 var(--red);
+}
+
+@media (min-width: 768px) {
+  .profile {
+    min-width: 300px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -307,7 +317,7 @@ li {
 }
 
 .red-text {
-  color: #ff0000;
+  color: var(--red);
   text-align: center;
 }
 
